[package]
name = "castrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.136", features = ["derive"] }
# podcast-api = "1.1.1"
sycamore = "0.8.0-beta.3"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'Window',
]
