[package]
name = "quicksilver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.6", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sycamore = "0.8.0-beta.3"
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
