[package]
name = "remembers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
sycamore = "0.8.0-beta.3"
wasm-bindgen = "0.2.79"

[dependencies.js-sys]
version = "0.3.56"

[dependencies.web-sys]
version = "0.3.56"
features = ["EventTarget"]
