[package]
name = "riddlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.7"
wasm-bindgen = "0.2.78"
indexmap = "1.7.0"
js-sys = "0.3.55"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.55"
features = ["Event", "EventTarget"]