[package]
name = "voters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.6.3"
wasm-bindgen-futures = "0.4.28"
json = "0.12.4"

[dependencies.surf]
version = "2.3.2"
default-features = false
features = ["wasm-client"]